examples/negative/silent_contract/extern_missing_ffi_capability.kai
# Silent contract (#520 audit, category 6 / FFI): an
# `extern "C" fn` declaration omits the `/ Ffi` row. The
# capability discipline requires every extern site to surface
# `Ffi`, otherwise the load-bearing claim "FFI crosses to C via
# the `Ffi` capability" (CLAUDE.md baseline architecture) is
# vacuous. kaikai accepts the declaration and the body uses it
# without the capability ever appearing in any row.
#
# See examples/negative/silent_contract/README.md for follow-up.

extern "C" fn puts(s: String) : Int

fn main() : Int = puts("hi")
